@@ -1,0 +1,5 @@
+# Manually maintained list of possible upstream signing key locations
+#
+upstream-signing-key.pgp
+upstream/signing-key.pgp
+upstream/signing-key.asc
